--- a/reports/contagem_da_cobertura.Rmd
+++ b/reports/contagem_da_cobertura.Rmd
@@ -8,6 +8,7 @@ theme_set(theme_bw())
 enem = read_csv("../dados_cruzados/sem_escolas_privadas/enem.csv")
 ideb_anos_finais = read_csv("../dados_cruzados/sem_escolas_privadas/ideb_anos_finais.csv")
 ideb_anos_iniciais = read_csv("../dados_cruzados/sem_escolas_privadas/ideb_anos_iniciais.csv")
+ideb_ensino_medio = read_csv("../dados_cruzados/sem_escolas_privadas/ideb_ensino_medio.csv")
 tcu = read_csv("../dados/TS_ESCOLA_2015_sem_escolas_privadas.csv")
 ```
 
@@ -26,12 +27,22 @@ ideb_2 = ideb_anos_finais %>%
     select(CO_ESCOLA, NU_NOTA)
 
 output_1 = merge(ideb_1, ideb_2, by="CO_ESCOLA", all=TRUE)
+```
 
+```{r}
 enem_1 = enem %>%
     filter(TP_SITUACAO_FUNCIONAMENTO == 1) %>%
     select(CO_ESCOLA, NU_MEDIA_TOTAL)
 
-output_2 = merge(output_1, enem_1, by="CO_ESCOLA", all=TRUE)
+output_2_1 = merge(output_1, enem_1, by="CO_ESCOLA", all=TRUE)
+```
+
+```{r}
+ideb_3 = ideb_ensino_medio %>%
+    filter(TP_SITUACAO_FUNCIONAMENTO == 1) %>%
+    select(CO_ESCOLA, NU_NOTA)
+
+output_2_2 = merge(output_1, ideb_3, by="CO_ESCOLA", all=TRUE)
 ```
 
 ```{r}
