--- a/reports/contagem_da_cobertura.Rmd
+++ b/reports/contagem_da_cobertura.Rmd
@@ -5,11 +5,11 @@ theme_set(theme_bw())
 ```
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE}
-enem = read_csv("../dados_cruzados/sem_escolas_privadas/enem.csv")
-ideb_anos_finais = read_csv("../dados_cruzados/sem_escolas_privadas/ideb_anos_finais.csv")
-ideb_anos_iniciais = read_csv("../dados_cruzados/sem_escolas_privadas/ideb_anos_iniciais.csv")
-ideb_ensino_medio = read_csv("../dados_cruzados/sem_escolas_privadas/ideb_ensino_medio.csv")
-tcu = read_csv("../dados/TS_ESCOLA_2015_sem_escolas_privadas.csv")
+enem = read_csv(here::here("dados/sem_escolas_privadas/enem.csv"))
+ideb_anos_finais = read_csv(here::here("dados/sem_escolas_privadas/ideb_anos_finais.csv"))
+ideb_anos_iniciais = read_csv(here::here("dados/sem_escolas_privadas/ideb_anos_iniciais.csv"))
+ideb_ensino_medio = read_csv(here::here("dados/sem_escolas_privadas/ideb_ensino_medio.csv"))
+tcu = read_csv(here::here("/dados-brutos/TS_ESCOLA_2015_sem_escolas_privadas.csv"))
 ```
 
 ```{r}
